team versus, result

--- a/index.html
+++ b/index.html
@@ -133,62 +133,39 @@
 					</div>
 				<div class="col-xs-12 col-sm-7 bottom-main">
 						<div class="col-xs-12 bottom-inner-wrapper">
+							<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-2 col-lg-3 col-lg-offset-2 game-box">
+								<div class="progress game-box-bar">
+									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
+  aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
+								</div>
+								<div>
+									<img src="images/player-avatar.jpg" class="game-img">
+								</div>
+								<p class="col-xs-12 text-center">Team Glorious</p>
+							</div>
+							<div class="col-xs-12 col-sm-2 col-md-2 text-center versus">vs.</div>
 							<div class="col-xs-12 col-sm-5 col-md-3 col-lg-5 game-box">
 								<div class="progress game-box-bar">
 									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
   aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
 								</div>
 								<div>
-									<div href="#" class="img-cover-box">2</div>
 									<img src="images/player-avatar.jpg" class="game-img">
 								</div>
-								<p class="col-xs-12 text-center">Team A</p>
+								<p class="col-xs-12 text-center">Team Glorious</p>
 							</div>
-							<div class="col-xs-12 col-sm-2 text-center">vs.</div>
-							<div class="col-xs-12 col-sm-5 col-md-3 col-lg-5 game-box">
-								<div class="progress game-box-bar">
-									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-								</div>
-								<div>
-									<div href="#" class="img-cover-box">2</div>
-									<img src="images/player-avatar.jpg" class="game-img">
-								</div>
-								<p class="col-xs-12 text-center">Team A</p>
+						</div>
+						<div class="col-xs-12 bottom-inner-wrapper result">
+							<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
+							<div class="col-xs-4 col-sm-2">
+								<input type="text" class="text-center"></>
+							</div>
+							<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1">
+								<input type="text" class="text-center"></>
 							</div>
 						</div>
 						<div class="col-xs-12 bottom-inner-wrapper">
-							<p class="text-center bottom-inner-wrapper-header">Featured teams</p>
-							<div class="col-xs-12 col-sm-6 col-md-4 col-lg-3 text-center featured-teams">
-								<div>
-									<h6>Battlefield 4</h6>
-									<img src="images/player-avatar.jpg">
-									<p>Team Amazing</p>
-								</div>
-							</div>
-						</div>
-						<div class="col-xs-12 bottom-inner-wrapper">
-							<p class="text-center bottom-inner-wrapper-header">Game levels</p>
-							<div class="col-xs-12 game-levels-wrapper">
-								<img src="images/game.png">
-								<div class="progress game-levels">
-									<div class="progress-bar progressbar-cover" role="progressbar" aria-valuenow="50"
-  aria-valuemin="0" aria-valuemax="100" style="width:50%">	
-									</div>
-									<p class="text-center">Battlefield 4</p>
-								</div>
-								<p class="text-uppercase level">lvl 01</p>
-							</div>
-							<div class="col-xs-12 game-levels-wrapper">
-								<img src="images/game.png">
-								<div class="progress game-levels">
-									<div class="progress-bar progressbar-cover" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:70%">	
-									</div>
-									<p class="text-center">Battlefield: Hardline</p>
-								</div>
-								<p class="text-uppercase level">lvl 02</p>
-							</div>
+		
 						</div>
 					</div>
 				</div>
