--- a/index.html
+++ b/index.html
@@ -158,10 +158,20 @@
 						<div class="col-xs-12 bottom-inner-wrapper result">
 							<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
 							<div class="col-xs-4 col-sm-2">
-								<input type="text" class="text-center"></>
+								<input type="text" class="text-center"/>
 							</div>
 							<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1">
-								<input type="text" class="text-center"></>
+								<input type="text" class="text-center"/>
+							</div>
+							<p class="col-xs-4 col-sm-3 col-md-offset-1">rate match</p>
+							<div class="col-xs-4 ratings-wrapper">
+								<div class="col-xs-12 ratings text-center">
+									<div><img src="images/rate-1.png" alt="rate-1"></div>
+									<div><img src="images/rate-2.png" alt="rate-2"></div>
+									<div><img src="images/rate-3.png" alt="rate-3"></div>
+								</div>
+								<div class="col-xs-12">upload media</div>
+								<div class="col-xs-12">send</div>
 							</div>
 						</div>
 						<div class="col-xs-12 bottom-inner-wrapper">
