--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 					</div>
 				<div class="col-xs-12 col-sm-7 bottom-main">
 						<div class="col-xs-12 bottom-inner-wrapper">
-							<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-2 col-lg-3 col-lg-offset-2 game-box">
+							<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
 								<div class="progress game-box-bar">
 									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
   aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
@@ -143,8 +143,8 @@
 								</div>
 								<p class="col-xs-12 text-center">Team Glorious</p>
 							</div>
-							<div class="col-xs-12 col-sm-2 col-md-2 text-center versus">vs.</div>
-							<div class="col-xs-12 col-sm-5 col-md-3 col-lg-5 game-box">
+							<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
+							<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
 								<div class="progress game-box-bar">
 									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
   aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
@@ -155,25 +155,26 @@
 								<p class="col-xs-12 text-center">Team Glorious</p>
 							</div>
 						</div>
-						<div class="col-xs-12 bottom-inner-wrapper result">
+						<form class="col-xs-12 bottom-inner-wrapper result">
 							<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
-							<div class="col-xs-4 col-sm-2">
-								<input type="text" class="text-center"/>
+							<div class="col-xs-1 col-sm-2 left-input">
+								<input type="text" name="left-result" class="text-center"/>
 							</div>
-							<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1">
-								<input type="text" class="text-center"/>
+							<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 right-input">
+								<input type="text" name="right-result" class="text-center"/>
 							</div>
-							<p class="col-xs-4 col-sm-3 col-md-offset-1">rate match</p>
-							<div class="col-xs-4 ratings-wrapper">
-								<div class="col-xs-12 ratings text-center">
-									<div><img src="images/rate-1.png" alt="rate-1"></div>
-									<div><img src="images/rate-2.png" alt="rate-2"></div>
-									<div><img src="images/rate-3.png" alt="rate-3"></div>
+							<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-md-offset-1 col-sm-pull-3 col-md-pull-4">rate match</p>
+							<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
+								<div class="ratings text-center">
+									<label for="rate-3" class="col-xs-4"><input type="radio" name="rating" id="rate-3"/><img src="images/rate-3.png" alt="rate-3"></label>
+									<label for="rate-2" class="col-xs-4"><input type="radio" name="rating" id="rate-2"/><img src="images/rate-2.png" alt="rate-2"></label>
+									<label for="rate-1" class="col-xs-4"><input type="radio" name="rating" id="rate-1"/><img src="images/rate-1.png" alt="rate-1"></label>
 								</div>
-								<div class="col-xs-12">upload media</div>
-								<div class="col-xs-12">send</div>
+								<input type="button" value="upload media" class="col-xs-11 text-center"/>
+								<input type="submit" value="send" class="col-xs-11 text-center"/>
 							</div>
-						</div>
+							<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
+						</form>
 						<div class="col-xs-12 bottom-inner-wrapper">
 		
 						</div>
