--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
   aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
 								</div>
 								<div>
-									<img src="images/player-avatar.jpg" class="game-img">
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
 								<p class="col-xs-12 text-center">Team Glorious</p>
 							</div>
@@ -150,7 +150,7 @@
   aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
 								</div>
 								<div>
-									<img src="images/player-avatar.jpg" class="game-img">
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
 								<p class="col-xs-12 text-center">Team Glorious</p>
 							</div>
@@ -176,7 +176,90 @@
 							<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
 						</form>
 						<div class="col-xs-12 bottom-inner-wrapper">
-		
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
+							<div class="col-xs-12 col-lg-6 players-wrapper">
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+								<div class="col-sm-6 players-right">
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="text-center">Player</p>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
