--- a/index.html
+++ b/index.html
@@ -127,180 +127,151 @@
 						<img src="images/flag.png">
 					</div>
 				</div>
-				<div class="match-info col-xs-12 col-sm-7">
-						<p class="col-xs-12 col-sm-6 text-center">Match Id: 37854462</p>
-						<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
-					</div>
+				<div class="col-xs-12 col-sm-7 match-info">
+					<p class="col-xs-12 col-sm-6 text-center">Match Id: 37854462</p>
+					<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
+				</div>
 				<div class="col-xs-12 col-sm-7 bottom-main">
-						<div class="col-xs-12 bottom-inner-wrapper">
-							<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
-								<div class="progress game-box-bar">
-									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-								</div>
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								</div>
-								<p class="col-xs-12 text-center">Team Glorious</p>
+					<div class="col-xs-12 bottom-inner-wrapper">
+						<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
+							<div class="progress game-box-bar">
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
 							</div>
-							<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
-							<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
-								<div class="progress game-box-bar">
-									<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70"
-  aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-								</div>
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+							</div>
+							<p class="col-xs-12 text-center">Team Glorious</p>
+						</div>
+						<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
+						<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
+							<div class="progress game-box-bar">
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
+							</div>
+							<div>
+								<img src="images/player-avatar.jpg" alt="player" class="game-img">
+							</div>
+							<p class="col-xs-12 text-center">Team Glorious</p>
+						</div>
+					</div>
+					<form class="col-xs-12 bottom-inner-wrapper result">
+						<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
+						<div class="col-xs-1 col-sm-2 left-input">
+							<input type="text" name="left-result" class="text-center"/>
+						</div>
+						<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 right-input">
+							<input type="text" name="right-result" class="text-center"/>
+						</div>
+						<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-md-offset-1 col-sm-pull-3 col-md-pull-4">rate match</p>
+						<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
+							<div class="ratings text-center">
+								<label for="rate-3" class="col-xs-4"><input type="radio" name="rating" id="rate-3"/><img src="images/rate-3.png" alt="rate-3"></label>
+								<label for="rate-2" class="col-xs-4"><input type="radio" name="rating" id="rate-2"/><img src="images/rate-2.png" alt="rate-2"></label>
+								<label for="rate-1" class="col-xs-4"><input type="radio" name="rating" id="rate-1"/><img src="images/rate-1.png" alt="rate-1"></label>
+							</div>
+							<input type="button" value="upload media" class="col-xs-11 text-center"/>
+							<input type="submit" value="send" class="col-xs-11 text-center"/>
+						</div>
+						<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
+					</form>
+					<div class="col-xs-12 bottom-inner-wrapper">
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6">
 								<div>
 									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<p class="col-xs-12 text-center">Team Glorious</p>
+								<p class="text-center">Player</p>
+							</div>
+							<div class="col-sm-6">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								</div>
+								<p class="text-center">Player</p>
 							</div>
 						</div>
-						<form class="col-xs-12 bottom-inner-wrapper result">
-							<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
-							<div class="col-xs-1 col-sm-2 left-input">
-								<input type="text" name="left-result" class="text-center"/>
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 right-input">
-								<input type="text" name="right-result" class="text-center"/>
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-md-offset-1 col-sm-pull-3 col-md-pull-4">rate match</p>
-							<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
-								<div class="ratings text-center">
-									<label for="rate-3" class="col-xs-4"><input type="radio" name="rating" id="rate-3"/><img src="images/rate-3.png" alt="rate-3"></label>
-									<label for="rate-2" class="col-xs-4"><input type="radio" name="rating" id="rate-2"/><img src="images/rate-2.png" alt="rate-2"></label>
-									<label for="rate-1" class="col-xs-4"><input type="radio" name="rating" id="rate-1"/><img src="images/rate-1.png" alt="rate-1"></label>
+						</div>
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<input type="button" value="upload media" class="col-xs-11 text-center"/>
-								<input type="submit" value="send" class="col-xs-11 text-center"/>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
-						</form>
-						<div class="col-xs-12 bottom-inner-wrapper">
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+							<div class="col-sm-6">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
-								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+						</div>
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
-								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
-								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+						</div>
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
-								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+							<div class="col-sm-6">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
-								</div>
+								<p class="text-center">Player</p>
 							</div>
-							<div class="col-xs-12 col-lg-6 players-wrapper">
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+						</div>
+						<div class="col-xs-12 col-lg-6 players-wrapper">
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
-								<div class="col-sm-6 players-right">
-									<div>
-										<img src="images/player-avatar.jpg" alt="player" class="game-img">
-									</div>
-									<p class="text-center">Player</p>
+								<p class="text-center">Player</p>
+							</div>
+							<div class="col-sm-6 players-right">
+								<div>
+									<img src="images/player-avatar.jpg" alt="player" class="game-img">
 								</div>
+								<p class="text-center">Player</p>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-4 profile-views">
+				<div class="col-xs-12 col-sm-4 match-info game-chat text-center">
+					<p>Battlefield Hardline 2v2 Opening Cup #1</p>
+				</div>
+				<div class="col-xs-12 col-sm-4 game-chat">
 					<div class="col-xs-12">
-						<h5>Profile views (23)</h5>
+						<h5 class="text-center">Chat: 37854462</h5>
 						<p class="col-xs-12 online-player">
 							<img src="images/team.png" alt="team">
 							Devil23 
-							<span>23 Aug 2015</span>
+							<span>16:52</span>
 						</p>
-						<p class="col-xs-12">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>
-						<p class="col-xs-12">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>
-						<p class="col-xs-12 online-player">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>
-						<p class="col-xs-12 online-player">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>
-						<p class="col-xs-12">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>
-						<p class="col-xs-12">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>23 Aug 2015</span>
-						</p>	
+						<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>	
 					</div>
 				</div>
 			</div>
