--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 							<p class="col-xs-12 text-center">Team Glorious</p>
 						</div>
 					</div>
-					<form class="col-xs-12 bottom-inner-wrapper result">
+					<form class="col-xs-12 bottom-inner-wrapper result" name="result">
 						<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
 						<div class="col-xs-1 col-sm-2 left-input">
 							<input type="text" name="left-result" class="text-center"/>
@@ -266,12 +266,55 @@
 				<div class="col-xs-12 col-sm-4 game-chat">
 					<div class="col-xs-12">
 						<h5 class="text-center">Chat: 37854462</h5>
-						<p class="col-xs-12 online-player">
-							<img src="images/team.png" alt="team">
-							Devil23 
-							<span>16:52</span>
-						</p>
-						<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>	
+						<div class="game-chat-inner">							
+							<h6 class="text-center">Today</h6>
+							<ul class="col-xs-12">
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 
+										<span>16:52</span>
+									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 
+										<span>16:52</span>
+									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 
+										<span>16:52</span>
+									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 
+										<span>16:52</span>
+									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 
+										<span>16:52</span>
+									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+							</ul>
+						</div>
+						<form name="chat-message" id="chat-message" class="new-message">
+							<textarea name="user-message" form+="chat-message" class="col-xs-9"></textarea>
+							<input type="submit" name="submit-message" value="send" class="col-xs-2 col-xs-offset-1">
+						</form>
 					</div>
 				</div>
 			</div>
@@ -282,6 +325,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script src="app.js"></script>
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
