--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 					<li class="col-xs-6 col-sm-2">
 						<p>Team <span>(choose)</span></p>
 					</li>
-					<li class="col-xs-6 col-sm-2">
+					<li class="col-xs-6 col-sm-2 locked">
 						<p>Team ID <span>(check)</span></p>
 					</li>
-					<li class="col-xs-6 col-sm-2">
+					<li class="col-xs-6 col-sm-2 locked">
 						<p>Sign up <span>(click here)</span></p>
 					</li>
-					<li class="col-xs-6 col-sm-2">
+					<li class="col-xs-6 col-sm-2 locked">
 						<p>Payment <span>(choose)</span></p>
 					</li>
 				</ul>
@@ -135,6 +135,7 @@
 					<div class="col-xs-12 bottom-inner-wrapper">
 						<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
 							<div class="progress game-box-bar">
+								<span class="badge">70%</span>
 								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
 							</div>
 							<div>
@@ -145,7 +146,8 @@
 						<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
 						<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
 							<div class="progress game-box-bar">
-								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
+								<span class="badge">60%</span>
+								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%"></div>
 							</div>
 							<div>
 								<img src="images/player-avatar.jpg" alt="player" class="game-img">
@@ -155,18 +157,44 @@
 					</div>
 					<form class="col-xs-12 bottom-inner-wrapper result" name="result">
 						<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
-						<div class="col-xs-1 col-sm-2 left-input">
-							<input type="text" name="left-result" class="text-center"/>
+						<div class="col-xs-1 col-sm-2 result-wrapper left-input">
+							<ul class="result-inner-wrapper">
+								<li class="enter-result text-center">
+									<img src="images/enter-result.png" alt="enter-result">
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-1" id="result1"/>1
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-2" id="result2"/>2
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-3" id="result3"/>3	
+								</li>
+							</ul>
 						</div>
-						<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 right-input">
-							<input type="text" name="right-result" class="text-center"/>
+						<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
+							<ul class="result-inner-wrapper">
+								<li class="enter-result text-center">
+									<img src="images/enter-result.png" alt="enter-result">
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-1" id="result1"/>1
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-2" id="result2"/>2
+								</li>
+								<li class="result-list text-center">
+									<input type="radio" name="result-3" id="result3"/>3	
+								</li>
+							</ul>	
 						</div>
-						<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-md-offset-1 col-sm-pull-3 col-md-pull-4">rate match</p>
+						<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
 						<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
 							<div class="ratings text-center">
-								<label for="rate-3" class="col-xs-4"><input type="radio" name="rating" id="rate-3"/><img src="images/rate-3.png" alt="rate-3"></label>
-								<label for="rate-2" class="col-xs-4"><input type="radio" name="rating" id="rate-2"/><img src="images/rate-2.png" alt="rate-2"></label>
-								<label for="rate-1" class="col-xs-4"><input type="radio" name="rating" id="rate-1"/><img src="images/rate-1.png" alt="rate-1"></label>
+								<label for="rate1" class="col-xs-4"><input type="radio" name="rating" id="rate1"/><img src="images/rate-1.png" alt="rate-1"></label>
+								<label for="rate2" class="col-xs-4"><input type="radio" name="rating" id="rate2"/><img src="images/rate-2.png" alt="rate-2"></label>
+								<label for="rate3" class="col-xs-4"><input type="radio" name="rating" id="rate3"/><img src="images/rate-3.png" alt="rate-3"></label>
 							</div>
 							<input type="button" value="upload media" class="col-xs-11 text-center"/>
 							<input type="submit" value="send" class="col-xs-11 text-center"/>
@@ -278,43 +306,43 @@
 									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
 								</li>
 								<li>
-									<p class="col-xs-12 online-player">
-										<img src="images/team.png" alt="team">
-										Devil23 
-										<span>16:52</span>
-									</p>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
+									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+								</li>
+								<li>
 									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
 								</li>
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Devil23 
-										<span>16:52</span>
+										Crazy_Joe 
+										<span>16:54</span>
 									</p>
 									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
 								</li>
 								<li>
-									<p class="col-xs-12 online-player">
-										<img src="images/team.png" alt="team">
-										Devil23 
-										<span>16:52</span>
-									</p>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
-								</li>
-								<li>
-									<p class="col-xs-12 online-player">
-										<img src="images/team.png" alt="team">
-										Devil23 
-										<span>16:52</span>
-									</p>
 									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
 								</li>
 							</ul>
 						</div>
 						<form name="chat-message" id="chat-message" class="new-message">
-							<textarea name="user-message" form+="chat-message" class="col-xs-9"></textarea>
-							<input type="submit" name="submit-message" value="send" class="col-xs-2 col-xs-offset-1">
+							<textarea name="user-message" form+="chat-message" class="col-xs-9 col-sm-12 col-lg-9"></textarea>
+							<input type="submit" name="submit-message" value="send" class="col-xs-2 col-xs-offset-1 col-sm-4 col-sm-offset-0 col-lg-2 col-lg-offset-1 text-center">
 						</form>
+					</div>
+					<div class="col-xs-12 right-banner">
+						<img src="images/mortal.jpg" alt="mortal" class="img-responsive">
 					</div>
 				</div>
 			</div>
@@ -324,6 +352,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-<script src="app.js"></script>
+<script src="./js/main_app.js"></script>
+<script src="./js/games_app.js"></script>
 </body>
 </html>
