sign up, payment red bar. chat hour, date

--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
 					<li class="col-xs-6 col-sm-2 locked">
 						<p>Team ID <span>(check)</span></p>
 					</li>
-					<li class="col-xs-6 col-sm-2 locked">
+					<li class="col-xs-6 col-sm-2 locked red-border">
 						<p>Sign up <span>(click here)</span></p>
 					</li>
-					<li class="col-xs-6 col-sm-2 locked">
+					<li class="col-xs-6 col-sm-2 locked red-border">
 						<p>Payment <span>(choose)</span></p>
 					</li>
 				</ul>
@@ -295,33 +295,41 @@
 					<div class="col-xs-12">
 						<h5 class="text-center">Chat: 37854462</h5>
 						<div class="game-chat-inner">							
-							<h6 class="text-center">Today</h6>
+							<h6 class="text-center">20.11.2015</h6>
 							<ul class="col-xs-12">
 								<li>
 									<p class="col-xs-12 online-player">
 										<img src="images/team.png" alt="team">
-										Devil23 
-										<span>16:52</span>
+										Devil23 	
 									</p>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:53</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">17:52</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">17:58</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:59</span>
 								</li>
 								<li>
 									<p class="col-xs-12 online-player">
@@ -329,10 +337,62 @@
 										Crazy_Joe 
 										<span>16:54</span>
 									</p>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
 								</li>
 								<li>
-									<p class="col-xs-11 chat-message">Can you guys please give ma a chance?</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
+								</li>
+							</ul>
+							<h6 class="text-center">19.11.2015</h6>
+							<ul class="col-xs-12">
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Devil23 	
+									</p>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:53</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">17:52</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">17:58</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:59</span>
+								</li>
+								<li>
+									<p class="col-xs-12 online-player">
+										<img src="images/team.png" alt="team">
+										Crazy_Joe 
+										<span>16:54</span>
+									</p>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
+								</li>
+								<li>
+									<p class="col-xs-10 chat-message">Can you guys please give ma a chance?</p>
+									<span class="col-xs-2">16:52</span>
 								</li>
 							</ul>
 						</div>
