ajax content display

--- a/index.html
+++ b/index.html
@@ -107,183 +107,187 @@
 				<p class="text-uppercase text-center">check in</p>
 			</div>
 			<div class="row bottom-row">
-				<div class="col-xs-12 col-sm-1 text-center profile-menu">
-					<div class="pointer">
+				<nav class="col-xs-12 col-sm-1 text-center profile-menu">
+					<a href="index.html" class="active">
 						<img src="images/cup-white.png">
-					</div>
-					<div class="pointer">
+					</a>
+					<a href="rules.html">
 						<img src="images/info.png">
-					</div>
-					<div class="pointer active">
+					</a>
+					<a href="ladder.html">
 						<img src="images/ladder.png">
-					</div>
-					<div class="pointer">
+					</a>
+					<a href="teams.html">
 						<img src="images/friends-white.png">
-					</div>
-					<div class="pointer">
+					</a>
+					<a href="rules.html">
 						<img src="images/card.png">
-					</div>
-					<div class="pointer">
+					</a>
+					<a href="rules.html">
 						<img src="images/flag.png">
-					</div>
-				</div>
-				<div class="col-xs-12 col-sm-7 match-info">
-					<p class="col-xs-12 col-sm-6 text-center">Match Id: 37854462</p>
-					<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
-				</div>
-				<div class="col-xs-12 col-sm-7 bottom-main">
-					<div class="col-xs-12 bottom-inner-wrapper">
-						<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
-							<div class="progress game-box-bar">
-								<span class="badge">70%</span>
-								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
-							</div>
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="col-xs-12 text-center">Team Glorious</p>
+					</a>
+				</nav>
+				<div id="content-wrapper">
+					<div id="content">
+						<div class="col-xs-12 col-sm-7 match-info">
+							<p class="col-xs-12 col-sm-6 text-center">Match Id: 37854462</p>
+							<p class="col-xs-12 col-sm-6 text-center">Date: 23 Aug 2015, 16:45</p>	
 						</div>
-						<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
-						<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
-							<div class="progress game-box-bar">
-								<span class="badge">60%</span>
-								<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%"></div>
-							</div>
-							<div>
-								<img src="images/player-avatar.jpg" alt="player" class="game-img">
-							</div>
-							<p class="col-xs-12 text-center">Team Glorious</p>
-						</div>
-					</div>
-					<form class="col-xs-12 bottom-inner-wrapper result" name="result">
-						<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
-						<div class="col-xs-1 col-sm-2 result-wrapper left-input">
-							<ul class="result-inner-wrapper">
-								<li class="enter-result text-center">
-									<img src="images/enter-result.png" alt="enter-result">
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-1" id="result1"/>1
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-2" id="result2"/>2
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-3" id="result3"/>3	
-								</li>
-							</ul>
-						</div>
-						<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
-							<ul class="result-inner-wrapper">
-								<li class="enter-result text-center">
-									<img src="images/enter-result.png" alt="enter-result">
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-1" id="result1"/>1
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-2" id="result2"/>2
-								</li>
-								<li class="result-list text-center">
-									<input type="radio" name="result-3" id="result3"/>3	
-								</li>
-							</ul>	
-						</div>
-						<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
-						<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
-							<div class="ratings text-center">
-								<label for="rate1" class="col-xs-4"><input type="radio" name="rating" id="rate1"/><img src="images/rate-1.png" alt="rate-1"></label>
-								<label for="rate2" class="col-xs-4"><input type="radio" name="rating" id="rate2"/><img src="images/rate-2.png" alt="rate-2"></label>
-								<label for="rate3" class="col-xs-4"><input type="radio" name="rating" id="rate3"/><img src="images/rate-3.png" alt="rate-3"></label>
-							</div>
-							<input type="button" value="upload media" class="col-xs-11 text-center"/>
-							<input type="submit" value="send" class="col-xs-11 text-center"/>
-						</div>
-						<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
-					</form>
-					<div class="col-xs-12 bottom-inner-wrapper">
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+						<div class="col-xs-12 col-sm-7 bottom-main">
+							<div class="col-xs-12 bottom-inner-wrapper">
+								<div class="col-xs-12 col-sm-5 col-md-3 col-md-offset-1 game-box left-box">
+									<div class="progress game-box-bar">
+										<span class="badge">70%</span>
+										<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%"></div>
+									</div>
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="col-xs-12 text-center">Team Glorious</p>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-sm-2 col-md-3 versus">vs.</div>
+								<div class="col-xs-12 col-sm-5 col-md-3 col-lg-2 game-box right-box">
+									<div class="progress game-box-bar">
+										<span class="badge">60%</span>
+										<div class="progress-bar box-bar-cover" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width:60%"></div>
+									</div>
+									<div>
+										<img src="images/player-avatar.jpg" alt="player" class="game-img">
+									</div>
+									<p class="col-xs-12 text-center">Team Glorious</p>
 								</div>
-								<p class="text-center">Player</p>
 							</div>
-						</div>
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+							<form class="col-xs-12 bottom-inner-wrapper result" name="result">
+								<p class="col-xs-4 col-sm-3 col-md-offset-1">enter result</p>
+								<div class="col-xs-1 col-sm-2 result-wrapper left-input">
+									<ul class="result-inner-wrapper">
+										<li class="enter-result text-center">
+											<img src="images/enter-result.png" alt="enter-result">
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-1" id="result1"/>1
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-2" id="result2"/>2
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-3" id="result3"/>3	
+										</li>
+									</ul>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-4 col-sm-2 col-sm-offset-2 col-md-offset-1 result-wrapper right-input">
+									<ul class="result-inner-wrapper">
+										<li class="enter-result text-center">
+											<img src="images/enter-result.png" alt="enter-result">
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-1" id="result1"/>1
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-2" id="result2"/>2
+										</li>
+										<li class="result-list text-center">
+											<input type="radio" name="result-3" id="result3"/>3	
+										</li>
+									</ul>	
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<p class="col-xs-4 col-xs-pull-4 col-sm-3 col-sm-pull-3 col-md-2 col-md-offset-2 col-md-pull-5">rate match</p>
+								<div class="col-xs-3 col-xs-pull-4 col-sm-pull-3 col-md-3 col-md-pull-4 ratings-wrapper">
+									<div class="ratings text-center">
+										<label for="rate1" class="col-xs-4"><input type="radio" name="rating" id="rate1"/><img src="images/rate-1.png" alt="rate-1"></label>
+										<label for="rate2" class="col-xs-4"><input type="radio" name="rating" id="rate2"/><img src="images/rate-2.png" alt="rate-2"></label>
+										<label for="rate3" class="col-xs-4"><input type="radio" name="rating" id="rate3"/><img src="images/rate-3.png" alt="rate-3"></label>
+									</div>
+									<input type="button" value="upload media" class="col-xs-11 text-center"/>
+									<input type="submit" value="send" class="col-xs-11 text-center"/>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-md-4 col-md-offset-8 report"><p>report match</p></div>
+							</form>
+							<div class="col-xs-12 bottom-inner-wrapper">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-						</div>
-						<div class="col-xs-12 col-lg-6 players-wrapper">
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
+								<div class="col-xs-12 col-lg-6 players-wrapper">
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
+									<div class="col-sm-6 players-right">
+										<div>
+											<img src="images/player-avatar.jpg" alt="player" class="game-img">
+										</div>
+										<p class="text-center">Player</p>
+									</div>
 								</div>
-								<p class="text-center">Player</p>
-							</div>
-							<div class="col-sm-6 players-right">
-								<div>
-									<img src="images/player-avatar.jpg" alt="player" class="game-img">
-								</div>
-								<p class="text-center">Player</p>
 							</div>
 						</div>
 					</div>
